--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -16,9 +16,9 @@
  "Question1":"¿Qué haces ahora? ¿Cómo empezaste con p5.js? ",
  "Question2":"¿Cómo usaste p5.js en este proyecto? ",
  "Question3":"¿Cuál es tu función favorita de p5.js? ",
- "Question4":"¿Enfrentó algún desafío al trabajar en este proyecto? Si es así, ¿cómo los superaste? ",
+ "Question4":"¿Enfrentaste algún desafío al trabajar en este proyecto? Si es así, ¿cómo los superaste? ",
  "Question5":"¿Qué es algo cool que deberíamos explorar?",
- "2019about": "Curated by [Ashley Kang](https://ashleykang.dev/) in the summer of 2019, below is the first ever curated collection of the p5.js Showcase! Learn more about each one by clicking on the preview. \n \n[View the original implementation here!](https://p5js.org/showcase/)",
+ "2019about": "Curatoría por [Ashley Kang](https://ashleykang.dev/) in the summer of 2019, below is the first ever curated collection of the p5.js Showcase! Learn more about each one by clicking on the preview. \n \n[View the original implementation here!](https://p5js.org/showcase/)",
  "About":"About the p5.js Showcase",
  "Welcome":"Welcome to the p5.js 2020 showcase!",
  "2020_intro1":"During Summer 2020 we asked the p5.js community around the world to submit their pieces for a new and expanded edition of the Showcase. Below you'll find all kinds of works ranging from sound-based visualizations to educational games to mathematical simulations.",
