--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -1,34 +1,34 @@
 {"Created By":"Creado Por",
-"2020Gallery_Intro":"To learn more about the project and how it was made, click on the image of each card preview. Also feel free to leave feedback or a comment in our [guestbook](https://forms.gle/nJ4Z6v31z2HZ6boaA)!",
- "Project Links":"Enlaces de proyectos",
- "Visualizations":"Visualizations",
- "Projects":"Projects",
- "Social Media":"Social Media",
- "Tools":"Útiles",
- "Live":"Live",
- "Code":"Coda",
- "About1":"What is the p5.js showcase?",
- "About2":"How is it organized?",
- "About3":"What are other cool initiatves with the p5.js community?",
- "Answer1": "The p5.js Showcase is an online gallery of work created with [p5.js](https://p5js.org/), an open source creative computing library. It was created by [Ashley Kang](https://ashleykang.dev) in 2019 ([view the 2019 Showcase here](https://p5js.org/showcase/)) and currently curated by [Connie Liu](https://connieliu0.github.io). \n \n The purpose of the Showcase is to celebrate how people are using and learning p5.js to make creative work with the aim of conveying our core values of inclusivity.",
- "Answer2":"Usually the p5.js will open up a call for submissions via [Twitter](https://twitter.com/p5xjs) or [Instagram](https://www.instagram.com/p5xjs/)! For the last two years, the Showcase has been run as a [GSoC project](https://summerofcode.withgoogle.com/).",
- "Answer3":"Make some sketches of your own with the [p5.js editor](https://editor.p5js.org/), discover more with [OpenProcessing](https://www.openprocessing.org/), and learn more with the [Coding Train](https://www.youtube.com/user/shiffman) and [Cozy Coding](https://www.twitch.tv/cozycoding/)!",
+"2020Gallery_Intro":"Para aprender más sobre el proyecto y cómo fue realizado, haz click en la imagen correspondiente. Te invitamos a dejar cualquier sugerencia o comentario en nuestro [libro de visitas](https://forms.gle/nJ4Z6v31z2HZ6boaA)!",
+ "Project Links":"Enlaces de los proyectos",
+ "Visualizations":"Visualizaciones",
+ "Projects":"Proyectos",
+ "Social Media":"Redes sociales",
+ "Tools":"Herramientas",
+ "Live":"En vivo",
+ "Code":"Código",
+ "About1":"¿Qué es el p5.js showcase?",
+ "About2":"¿Cómo fue organizado?",
+ "About3":"¿Cuáles otras entretenidas iniciativas existen en de la comunidad de p5.js?",
+ "Answer1": "La p5.js Showcase es una galería en línea de trabajos creados con [p5.js](https://p5js.org/), una biblioteca creativa computacional de fuente abierta. Fue creada por [Ashley Kang](https://ashleykang.dev) en 2019 ([ver la versión 2019 aquí](https://p5js.org/showcase/)) y la curatoría actual está a cargo de [Connie Liu](https://connieliu0.github.io). \n \n El objetivo de la Showcase es celebrar las formas en que la gente utiliza y aprende con p5.js para realizar trabajo creativo, con el propósito de transmitir nuestros valores principales de inclusividad.",
+ "Answer2":"Usualmente p5.js abre una convocatoria para contribuciones vía [Twitter](https://twitter.com/p5xjs) o [Instagram](https://www.instagram.com/p5xjs/)! En los últimos dos años, la Showcase ha sido un [proyecto GSoC](https://summerofcode.withgoogle.com/).",
+ "Answer3":"Realiza algunos bosquejos con el [editor p5.js](https://editor.p5js.org/), descubre más en [OpenProcessing](https://www.openprocessing.org/), y sigue aprendiendo con [Coding Train](https://www.youtube.com/user/shiffman) y [Cozy Coding](https://www.twitch.tv/cozycoding/)!",
  "Question1":"¿Qué haces ahora? ¿Cómo empezaste con p5.js? ",
  "Question2":"¿Cómo usaste p5.js en este proyecto? ",
  "Question3":"¿Cuál es tu función favorita de p5.js? ",
  "Question4":"¿Enfrentaste algún desafío al trabajar en este proyecto? Si es así, ¿cómo los superaste? ",
- "Question5":"¿Qué es algo cool que deberíamos explorar?",
- "2019about": "Curatoría por [Ashley Kang](https://ashleykang.dev/) in the summer of 2019, below is the first ever curated collection of the p5.js Showcase! Learn more about each one by clicking on the preview. \n \n[View the original implementation here!](https://p5js.org/showcase/)",
- "About":"About the p5.js Showcase",
- "Welcome":"Welcome to the p5.js 2020 showcase!",
- "2020_intro1":"During Summer 2020 we asked the p5.js community around the world to submit their pieces for a new and expanded edition of the Showcase. Below you'll find all kinds of works ranging from sound-based visualizations to educational games to mathematical simulations.",
- "2020_intro1.5":"Personally as the curator for this year's Showcase, I can only describe the experience in one word: _inspired_. The amount of passion and creative curiosity that beams from everyone's work has me in awe - and I truly believes encapsulates the spirit of the p5.js community.",
- "2020_intro2":"Learn more about the p5.js community below!",
- "Viz1":"this year we got submissions from...",
- "Viz2":"our submitters are...",
- "Viz3":"to them p5.js is...",
- "Viz4":"view the projects!",
- "Jump to":"Jump to:",
+ "Question5":"¿Qué es algo interesante que deberíamos explorar?",
+ "2019about": "Curatoría por [Ashley Kang](https://ashleykang.dev/) durante el verano de 2019. ¡Ahora presentamos la primera colección de curatoría para la p5.js Showcase! Aprende más sobre cada trabajo, haciendo click en la vista previa. \n \n[¡Revisa la implementación original aquí!](https://p5js.org/showcase/)",
+ "About":"Acerca de la p5.js Showcase",
+ "Welcome":"Bienvenide a la p5.js 2020 showcase!",
+ "2020_intro1":"Durante el verano 2020 le pedimos a la comunidad de p5.js alrededor del mundo que presentara sus obras a una nueva y expandida edición de la Showcase. A continuación encontrarás todo tipo de trabajos que van desde visualizaciones basadas en sonidos, pasando por juegos educacionales y también simulaciones matemáticas.",
+ "2020_intro1.5":"Personalmente como la curadora de la Showcase de este año, solamente puedo describir la experiencia con una palabra: _inspiración_. La cantidad de pasión y curiosidad creativa que emana de cada trabajo me emociona - y realmente creo que encapsula el espírut de la comunidad de p5.js.",
+ "2020_intro2":"¡Conoce más sobre la comunidad de p5.js a continuación!",
+ "Viz1":"este año tenemos contribuciones de...",
+ "Viz2":"nuestras personas contribuyentes son...",
+ "Viz3":"para elles p5.js es...",
+ "Viz4":"¡revisa los proyectos!",
+ "Jump to":"Filtra:",
  "filters":[
     {"name": "All"},
     {"name": "Visual"},
@@ -94,7 +94,7 @@
         "resources":
         [ 
             {
-                "name":"Sketch de ejemplo en p5.js Web Editor",
+                "name":"Bosquejo de ejemplo en p5.js Web Editor",
                 "link": "https://editor.p5js.org/ronicantor/sketches/eq2bIhmh2"
                 },
                 { 
@@ -312,18 +312,18 @@
 ],
 "showcase2020":[
     { "author": "Vince Nguyen",
-        "pronouns": "he/him",
+        "pronouns": "él",
         "location": "Abu Dhabi, UAE",
         "title": "Love Maze",
-        "description": "Two people, a computer, a maze that requires teamwork to solve, a couple of questions that challenge mutual honesty and mutual understanding, Love Maze is a fun and engaging game for any couple that wants to take their relationship to the next level.",
+        "description": "Dos personas, una computadora, un laberinto que requiere trabajo en equipo, un par de preguntas que trabajan la honestidad y el entendimiento mutuos, Love Maze es un juego entretenido y cautivante que quiere llevar su relación al siguiente nivel.",
         "extradesc": "",
         "live": "https://nguyenvince.github.io/work/love-maze/",
         "code": "https://github.com/nguyenvince/nguyenvince.github.io/tree/master/work/love-maze",
         "type": "Game",
         "tools": "map,dist,floor,bezierVertex",
-        "answer1": "I am a senior at NYU Abu Dhabi majoring in Interactive Media with a minor in Computer Science. I am interested in incorporating storytelling elements into creative projects that can transform traditionally analog spaces (museums, classrooms...)",
-        "answer2": "To start with, my previous experience with Processing back when I was taking Intro to Interactive Media paved the way I used p5.js in my projects. As both are extremely similar framework, the transition from Processing to p5.js was quick and enjoyable. After Professor Craig Protzel walked me through the basic of p5.js, I realized that I could develop creative coding projects and share them to everyone on the web. Love Maze is probably my first serious p5.js project!",
-        "answer3": "I was inspired by (the one and only) Daniel Shiffman's tutorial on how to create a maze in p5.js (https://www.youtube.com/watch?v=HyK_Q5rrcr4). Being in New York for the first time at the time, I was surrounded by the vibrant dating scene the city had to offer. Thus, I wanted to create a love game that allows people to open up, to dig deeper than the usual Tinder date questions, and to test each other's compatibility while performing teamwork.\n\np5.js proved tremendously useful in allowing me to visualize the maze from an array of objects to a 2D maze filled with different tiles, each of which can be individualized with regards to its color and whether or not it contains a \"roadblock\". By using p5.js' Bezier curves, I was also able to draw a heart in the middle of the maze that visualizes the distance between the two player. As the heart is updated every frame, it looks like it is actually beating, getting bigger as the two players inching closer to one another. Also, p5.js provided an easier way to limit the frame rate (compared to plain JavaScript), which I set to 24 to ensure that the game runs equally well across different devices.\n\nAfter creating the maze, I had to randomly put \"roadblocks\" along the maze; however, to prevent the random algorithm from putting them near the maze's dead-ends, I had to solve the randomly-generated maze and spread them over the paths that leads one player to the other. Thankfully, my first lesson in recursion came in and saved the day! A maze solver based on recursive method ensures the two players have to answer all the questions before reaching one another.",
+        "answer1": "Soy estudiante de cuarto año en NYU Abu Dhabi, estudiando principalmente medios interactivos, y también ciencias de la computación. Estoy interesado en incorporar elementos narrativos a proyectos creativos que puedan transformar espacios tradicionalmente análogos (muesos, salas de clases...)",
+        "answer2": "Para empezar, mi experiencia pasada con Processing fue cuando tomé el curso de introducción a medios interactivos, y me ayudó a empezar a usar p5.js en mis proyectos. Como ambas herramientas son muy similares, la transición de Processing a p5.js fue rápida y amena. Después de que el profesor Craig Protzel me explicó los fundamentos de p5.js, me di cuenta que puedo desarrollar proyectos de programación creativa y compartirlos con toda la gente en la web. ¡Love Maze es probablemente mi primer proyecto serio con p5.js!",
+        "answer3": "Fui inspirado por (el único y gran) Daniel Shiffman y su tutorial en cómo crear un laberinto en p5.js (https://www.youtube.com/watch?v=HyK_Q5rrcr4). Visitando New York por primera vez, me vi rodeado de una vibrante escena de citas que la ciudad ofrece. Por esto, quise crear un juego basado en amor que le ayude a la gente a abrirse, a explorar con mayor profundidad que las usuales preguntas de Tinder, y para que puedan entender su compatibilidad mientras colaboran.\n\np5.js fue tremendamente útil al permitirme visualizar el laberinto a partir de un arreglo de objetos, y conformar un laberinto 2D con diferentes secciones, cada una individualizada en cuanto a color y a su condición de ser una \"encrucijada\". Usando las curvas de Bezier de p5.js, pude dibujar un corazón en el medio del laberinto que visualiza la distancia entre les jugadores. Como el corazón es actualizado en cada cuadro, parece que está realmente latiendo, y haciéndose más grande mientras les jugadores se van acercando. Además, p5.js provee una manera fácil de limitar la tasa de refresco de cuadros (a diferencia de JavaScript a secas), que usé para limitarla a 24 cuadros por segundo y así asegurar que el juego funcionara similarmente en distintos dispositivos.\n\nDespués de crear el laberinto, tuve que ubicar aleatoriamente \"obstáculo\" en el laberinto; sin embargo, para prevenir que el algoritmo aleatorio los pusiera muy cerca de los callejones sin salida del laberinto, tuve que resolver el laberinto aleatorio y ubicarlos solamente en las vías que conectan a la gente jugandor. ¡Afortunadamente, mi primera lección en recursión me ayudó! Un resolvedor de laberitnos basado en métodos recursivos asegura que ambos jugadores tengan que responder todas las preguntas antes de encontrarse y con la otra persona.",
         "answer4": "My favorite feature of p5.js is its ease of reading sensor information from smartphones (for example, accelerometer and gyroscope). This, coupled with the map functions, has allowed me to create new interface for making arts with mobile devices that extends beyond touching and swiping.",
         "answer5": "Integrating a p5.js canvas a HTML page with other DOM elements proved to be quite cumbersome and error-prone. I had to pay close attention to setting the right z-index, position (absolute), elements' widths and heights to ensure a seamless integration of p5.js with other DOMs into a one-page web game.",
         "answer6": "I mostly use p5.js for 2D projects; however, when it comes to 3D and WebXR, I find A-Frame.js framework extremely easy to learn and versatile to use. A-Frame.js really reminds me of p5.js as both are accessible to creative artists who do not necessarily have technical background on computer graphic.",
